--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "files.associations": {
     "vector": "cpp",
+    "xstring": "cpp",
+    "cctype": "cpp",
     "cmath": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
     "cstddef": "cpp",
     "cstdint": "cpp",
     "cstdio": "cpp",
@@ -12,17 +16,36 @@
     "initializer_list": "cpp",
     "iosfwd": "cpp",
     "limits": "cpp",
+    "list": "cpp",
     "new": "cpp",
     "numeric": "cpp",
-    "stdexcept": "cpp",
+    "set": "cpp",
+    "string": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
+    "unordered_set": "cpp",
     "utility": "cpp",
+    "xhash": "cpp",
     "xmemory": "cpp",
-    "xmemory0": "cpp",
-    "xstddef": "cpp",
-    "xstring": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xtree": "cpp",
+    "xutility": "cpp",
+    "algorithm": "cpp",
+    "ios": "cpp",
+    "istream": "cpp",
+    "memory": "cpp",
+    "ostream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "system_error": "cpp",
+    "typeinfo": "cpp",
+    "unordered_map": "cpp",
+    "xfacet": "cpp",
+    "xiosbase": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "xlocnum": "cpp",
+    "xmemory0": "cpp",
+    "xstddef": "cpp"
   }
 }
