--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,7 @@
     "xlocmes": "cpp",
     "xlocmon": "cpp",
     "xloctime": "cpp",
-    "functional": "cpp"
+    "functional": "cpp",
+    "valarray": "cpp"
   }
 }
